[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/enemy/baseEnemy/enemyBullet.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.92549, 0.129412, 0.129412, 1 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 2.0
height = 4.0
radial_segments = 5
rings = 5

[node name="enemyBullet" type="Area" groups=[
"bullet",
"enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="bulletDespawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_enemyBullet_body_entered"]
[connection signal="timeout" from="bulletDespawnTimer" to="." method="_on_bulletDespawnTimer_timeout"]
